--- a/www.filebot.net/eula.html
+++ b/www.filebot.net/eula.html
@@ -3,9 +3,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>End User License Agreement - FileBot</title>
-		<link rel="stylesheet" href="base.css" type="text/css" />
-		<link rel="stylesheet" href="eula.css" type="text/css" />
+
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+		<link rel="stylesheet" href="base.css" type="text/css" />
+		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)" />
+
+		<link rel="stylesheet" href="eula.css" type="text/css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" type="text/css">
 	</head>
 	<body>
