--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -22,15 +22,15 @@
 			<div class="navigation">
 				<div>
 				<ul>
-					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
-					<li><a href="https://www.filebot.net/#download">Download</a></li>
+					<li><a href="forums/">Forums</a></li>
+					<li><a href="manual.html">FAQ</a></li>
+					<li><a href="download.html">Download</a></li>
 				</ul>
 				</div>
 			</div>
 
 			<div class="header">
-				<a href="https://www.filebot.net/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					Format Expressions
 					<span class="description">User defined episode / movie naming scheme</span>
@@ -45,13 +45,13 @@
 					<h2>About</h2>
 					<div class="main-section-paragraph">
 						<p>
-						You can define your own episode and movie naming schemes. Built-in bindings such as <a href="https://www.filebot.net/forums/viewtopic.php?t=4116">{plex}</a> can be used unmodified, or as a starting point for your own custom format.
+						You can define your own episode and movie naming schemes. Built-in bindings such as <a href="forums/viewtopic.php?t=4116">{plex}</a> can be used unmodified, or as a starting point for your own custom format.
 						</p>
 						<p>
 						Simple things are easy. Complex things are just as easy, if you're familiar with <a href="http://groovy-lang.org/">Groovy</a> scripting. There are <a href="#bindings">many bindings</a> that can serve as building blocks for you to write your own custom format tailored to your liking with ease.
 						</p>
 						<p>
-						You will find <a href="https://www.filebot.net/forums/viewtopic.php?t=2">many examples</a> for all kinds of custom use cases. Ready for you to just copy &amp; paste,<br> and (optionally) customize to your needs.
+						You will find <a href="forums/viewtopic.php?t=2">many examples</a> for all kinds of custom use cases. Ready for you to just copy &amp; paste,<br> and (optionally) customize to your needs.
 						</p>
 					</div>
 					<h2 id="examples">Examples</h2>
@@ -286,19 +286,19 @@
 						</tr>
 						<tr>
 							<td>plex</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4116">Plex Naming Standard</a></td>
+							<td><a href="forums/viewtopic.php?t=4116">Plex Naming Standard</a></td>
 							<td>&lt;relative path&gt;</td>
 							<td>File</td>
 						</tr>
 						<tr>
 							<td>kodi</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4116">Kodi Naming Standard</a></td>
+							<td><a href="forums/viewtopic.php?t=4116">Kodi Naming Standard</a></td>
 							<td>&lt;relative path&gt;</td>
 							<td>File</td>
 						</tr>
 						<tr>
 							<td>emby</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4116">Emby Naming Standard</a></td>
+							<td><a href="forums/viewtopic.php?t=4116">Emby Naming Standard</a></td>
 							<td>&lt;relative path&gt;</td>
 							<td>File</td>
 						</tr>
@@ -538,13 +538,13 @@
 						</tr>
 						<tr>
 							<td>vs</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11265">source class</a></td>
+							<td><a href="forums/viewtopic.php?t=11265">source class</a></td>
 							<td>BluRay</td>
 							<td>String</td>
 						</tr>
 						<tr>
 							<td>source</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11265">source match</a></td>
+							<td><a href="forums/viewtopic.php?t=11265">source match</a></td>
 							<td>BD25</td>
 							<td>String</td>
 						</tr>
@@ -562,19 +562,19 @@
 						</tr>
 						<tr>
 							<td>group</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4">release group</a></td>
+							<td><a href="forums/viewtopic.php?t=4">release group</a></td>
 							<td>ALLiANCE</td>
 							<td>String</td>
 						</tr>
 						<tr>
 							<td>original</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=324">original filename</a></td>
+							<td><a href="forums/viewtopic.php?t=324">original filename</a></td>
 							<td>Serenity</td>
 							<td>String</td>
 						</tr>
 						<tr>
 							<td>historic</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?p=2459#p2459">original path</a></td>
+							<td><a href="forums/viewtopic.php?p=2459#p2459">original path</a></td>
 							<td>&lt;bindings&gt;</td>
 							<td>[String:Any]</td>
 						</tr>
@@ -592,13 +592,13 @@
 						</tr>
 						<tr>
 							<td>localize</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3761">dynamic localization</a></td>
+							<td><a href="forums/viewtopic.php?t=3761">dynamic localization</a></td>
 							<td>&lt;languages&gt;</td>
 							<td>[String:Any]</td>
 						</tr>
 						<tr>
 							<td>order</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=2769">dynamic episode order</a></td>
+							<td><a href="forums/viewtopic.php?t=2769">dynamic episode order</a></td>
 							<td>&lt;episode orders&gt;</td>
 							<td>[String:Any]</td>
 						</tr>
@@ -664,13 +664,13 @@
 						</tr>
 						<tr>
 							<td>audioLanguages</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4285">audio streams</a></td>
+							<td><a href="forums/viewtopic.php?t=4285">audio streams</a></td>
 							<td>&lt;audio languages&gt;</td>
 							<td>Language*</td>
 						</tr>
 						<tr>
 							<td>textLanguages</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4285">subtitle streams</a></td>
+							<td><a href="forums/viewtopic.php?t=4285">subtitle streams</a></td>
 							<td>&lt;subtitle languages&gt;</td>
 							<td>Language*</td>
 						</tr>
@@ -724,25 +724,25 @@
 						</tr>
 						<tr>
 							<td>media</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4285">media properties</a></td>
+							<td><a href="forums/viewtopic.php?t=4285">media properties</a></td>
 							<td>&lt;media properties&gt;</td>
 							<td>[String:String]</td>
 						</tr>
 						<tr>
 							<td>video</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4285">video streams</a></td>
+							<td><a href="forums/viewtopic.php?t=4285">video streams</a></td>
 							<td>&lt;video streams&gt;</td>
 							<td>[String:String]*</td>
 						</tr>
 						<tr>
 							<td>audio</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4285">audio streams</a></td>
+							<td><a href="forums/viewtopic.php?t=4285">audio streams</a></td>
 							<td>&lt;audio streams&gt;</td>
 							<td>[String:String]*</td>
 						</tr>
 						<tr>
 							<td>text</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4285">subtitle streams</a></td>
+							<td><a href="forums/viewtopic.php?t=4285">subtitle streams</a></td>
 							<td>&lt;subtitle streams&gt;</td>
 							<td>[String:String]*</td>
 						</tr>
@@ -766,19 +766,19 @@
 						</tr>
 						<tr>
 							<td>model</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=9814">match context</a></td>
+							<td><a href="forums/viewtopic.php?t=9814">match context</a></td>
 							<td>&lt;list of bindings&gt;</td>
 							<td>[String:Any]*</td>
 						</tr>
 						<tr>
 							<td>AnimeList</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=10996">Anime Lists mapper</a></td>
+							<td><a href="forums/viewtopic.php?t=10996">Anime Lists mapper</a></td>
 							<td>&lt;mapping&gt;</td>
 							<td>Episode</td>
 						</tr>
 						<tr>
 							<td>XEM</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=10996">XEM mapper</a></td>
+							<td><a href="forums/viewtopic.php?t=10996">XEM mapper</a></td>
 							<td>&lt;mapping&gt;</td>
 							<td>Episode</td>
 						</tr>
@@ -902,11 +902,11 @@
 					</p>
 				</div>
 
-				<p class="suggestion">
-					Need help getting started? Join the <a href="https://www.filebot.net/forums/viewforum.php?f=5">Forum</a> or <a href="https://www.filebot.net/channel.html">Discord</a>.
-				</p>
-
 				<div class="metrics"></div>
+
+				<p class="suggestion">
+					Need help getting started? Join the <a href="forums/viewforum.php?f=5">Forum</a> or <a href="channel.html">Discord</a>.
+				</p>
 
 				<div class="footer">
 					<p><a href="/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
