--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -11,15 +11,15 @@
 			<div class="navigation">
 				<div>
 				<ul>
-					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
-					<li><a href="https://www.filebot.net/#download">Download</a></li>
+					<li><a href="forums/">Forums</a></li>
+					<li><a href="manual.html">FAQ</a></li>
+					<li><a href="download.html">Download</a></li>
 				</ul>
 				</div>
 			</div>
 
 			<div class="header">
-				<a target="_blank" href="https://www.filebot.net/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot
 					<span class="description">Paddle Checkout Complete</span>
@@ -33,7 +33,7 @@
 				<div class="section about">
 					<h2 style="margin-left: 58px">Thank you for purchasing FileBot! 💯</h2>
 					<p>
-					Your license has been issued and will arrive in your mail box shortly. You will receive <a target="_blank" href="https://www.filebot.net/activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
+					Your license has been issued and will arrive in your mail box shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
 					</p>
 
 					<div class="review message box">
@@ -59,17 +59,17 @@
 				</div>
 
 				<p class="suggestion" style="margin-top: 565px; margin-bottom: 60px">
-				📘 Please read <a target="_blank" href="https://www.filebot.net/activate.html">How do I activate my license?</a> for additional license activation options.
+				📘 Please read <a target="_blank" href="activate.html">How do I activate my license?</a> for additional license activation options.
 				</p>
 
 				<div class="section contact">
 					<img class="icon" src="images/contact.png" alt="contact" width="48" height="48" />
 					<h2>Contact</h2>
 					<p>
-						If you have received <strong>no email</strong> at all then you have likely <a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">rejecting emails</a>. Please <a target="_blank" href="https://paddle.net/charge">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
+						If you have received <strong>no email</strong> at all then you have likely <a target="_blank" href="forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a target="_blank" href="forums/viewtopic.php?t=11131">rejecting emails</a>. Please <a target="_blank" href="contact/paddle.html">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
 					</p>
 					<p>
-						<a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns. Please <a target="_blank" href="https://paddle.net/charge">contact Paddle</a> if you have any questions regarding your purchase.
+						<a target="_blank" href="contact/paddle.html">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns. Please <a target="_blank" href="contact/paddle.html">contact Paddle</a> if you have any questions regarding your purchase.
 					</p>
 				</div>
 
