--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -2,23 +2,24 @@
 <html>
 	<head>
 		<title>Download FileBot</title>
-		<link rel="stylesheet" href="base.css">
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+		<link rel="stylesheet" href="base.css" type="text/css" />
+		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)" />
 	</head>
 	<body>
 		<div class="page">
 			<div class="navigation">
 				<div>
 				<ul>
-					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
-					<li><a href="https://www.filebot.net/#download">Download</a></li>
+					<li><a href="forums/">Forums</a></li>
+					<li><a href="manual.html">FAQ</a></li>
+					<li><a href="download.html">Download</a></li>
 				</ul>
 				</div>
 			</div>
 
 			<div class="header">
-				<a href="https://www.filebot.net/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot Downloads
 					<span class="description">Installer packages for Windows, Mac and Linux</span>
@@ -87,9 +88,7 @@
 					</ul>
 				</div>
 
-				<p class="suggestion" style="margin-top: 250px">
-				Need some help getting started? Join the <a href="https://www.filebot.net/forums/viewforum.php?f=8">forums</a> and ask.
-				</p>
+				<div class="metrics"></div>
 
 				<div class="footer">
 					<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
