--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -35,9 +35,9 @@
 			<div class="navigation">
 				<div>
 					<ul>
-						<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-						<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
-						<li><a href="#download">Download</a></li>
+						<li><a href="forums/">Forums</a></li>
+						<li><a href="manual.html">FAQ</a></li>
+						<li><a href="download.html">Download</a></li>
 					</ul>
 				</div>
 			</div>
@@ -216,10 +216,10 @@
 					</a>
 
 					<ul class="list">
-						<li class="note">Please <a href="https://www.filebot.net/forums/viewtopic.php?t=11131" target="forum">type your email address correctly</a> when purchasing a license.</li>
-						<li class="note">Please download and <a href="https://www.filebot.net/forums/viewtopic.php?t=11790" target="forum">evaluate FileBot</a> before purchasing a license.</li>
+						<li class="note">Please <a href="forums/viewtopic.php?t=11131" target="forum">type your email address correctly</a> when purchasing a license.</li>
+						<li class="note">Please download and <a href="forums/viewtopic.php?t=11790" target="forum">evaluate FileBot</a> before purchasing a license.</li>
 						<li class="note">A single per-user license is valid on all platforms and can be used on multiple machines.</li>
-						<li class="note"><a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">Microsoft Store</a> and <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">Mac App Store</a> purchases neither include nor require a <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
+						<li class="note"><a href="forums/viewtopic.php?t=6265" target="forum">Microsoft Store</a> and <a href="forums/viewtopic.php?t=6265" target="forum">Mac App Store</a> purchases neither include nor require a <a href="forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
 					</ul>
 				</div>
 
@@ -229,8 +229,8 @@
 					<h2>Contact</h2>
 					<p>
 						The project is continuously seeking for improvements, so any kind of <a target="_blank" href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
-						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="https://www.filebot.net/manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
-						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a target="_blank" href="https://www.filebot.net/channel.html">Discord </a> channel.
+						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
+						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a target="_blank" href="channel.html">Discord </a> channel.
 					</p>
 				</div>
 			</div>
