--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>Buy FileBot License</title>
-		<link rel="stylesheet" href="base.css">
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+		<link rel="stylesheet" href="base.css" type="text/css" />
+		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)" />
+
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
@@ -14,15 +16,15 @@
 			<div class="navigation">
 				<div>
 				<ul>
-					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
-					<li><a href="https://www.filebot.net/#download">Download</a></li>
+					<li><a href="forums/">Forums</a></li>
+					<li><a href="manual.html">FAQ</a></li>
+					<li><a href="download.html">Download</a></li>
 				</ul>
 				</div>
 			</div>
 
 			<div class="header">
-				<a href="https://www.filebot.net/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot
 					<span class="description">Purchase a universal license</span>
@@ -52,15 +54,15 @@
 					</a>
 
 					<ul class="list">
-						<li class="note">Please <a href="https://www.filebot.net/forums/viewtopic.php?t=11131" target="forum">type your email address correctly</a> when purchasing a license.</li>
-						<li class="note">Please download and <a href="https://www.filebot.net/forums/viewtopic.php?t=11790" target="forum">evaluate FileBot</a> before purchasing a license.</li>
+						<li class="note">Please <a href="forums/viewtopic.php?t=11131" target="forum">type your email address correctly</a> when purchasing a license.</li>
+						<li class="note">Please download and <a href="forums/viewtopic.php?t=11790" target="forum">evaluate FileBot</a> before purchasing a license.</li>
 						<li class="note">A single per-user license is valid on all platforms and can be used on multiple machines.</li>
-						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases neither include nor require a <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
+						<li class="note"><a href="forums/viewtopic.php?t=6265" target="forum">Microsoft Store</a> and <a href="forums/viewtopic.php?t=6265" target="forum">Mac App Store</a> purchases neither include nor require a <a href="forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
 					</ul>
 				</div>
 
 				<p class="suggestion" style="margin-top: 120px; margin-bottom: 20px">
-				Please read to <a href="https://www.filebot.net/activate.html">How do I activate my license?</a> for details on license activation.
+				Please read to <a href="activate.html">How do I activate my license?</a> for details on license activation.
 				</p>
 
 				<div class="footer">
