<link> tag never has a </link> close tag

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Download FileBot</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
-		<link rel="stylesheet" href="base.css" type="text/css" />
-		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)" />
+		<link rel="stylesheet" href="base.css" type="text/css">
+		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	</head>
 	<body>
 		<div class="page">
